Add alpha/beta tag and banner page

--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -43,6 +43,8 @@
 
 				{{ item("Tabs", "/style-guide/tabs", "Content is separated into different panes, with only one pane viewable at a time.") }}
 
+				{{ item("Alpha/beta", "/style-guide/alpha-beta", "Phase tags and banner to denote alpha and beta services") }}
+
 			</div>
 		</div>
 
