--- a/web/server/views/style-guide/buttons.njk
+++ b/web/server/views/style-guide/buttons.njk
@@ -41,15 +41,15 @@
 		{% example -%}
 			<div class="grid">
 				<div class="grid__item one-half">
-					<p><button type="button" class="btn btn--xs">Large button</button></p>
-					<p><button type="button" class="btn btn--sm">Large button</button></p>
+					<p><button type="button" class="btn btn--xs">XS button</button></p>
+					<p><button type="button" class="btn btn--sm">Small button</button></p>
 					<p><button type="button" class="btn">Default button</button></p>
 					<p><button type="button" class="btn btn--lg">Large button</button></p>
 					<p><button type="button" class="btn btn--xl">XL button</button></p>
 				</div>
 				<div class="grid__item one-half">
-					<p><button type="button" class="btn btn--secondary btn--xs">Large button</button></p>
-					<p><button type="button" class="btn btn--secondary btn--sm">Large button</button></p>
+					<p><button type="button" class="btn btn--secondary btn--xs">XS button</button></p>
+					<p><button type="button" class="btn btn--secondary btn--sm">Small button</button></p>
 					<p><button type="button" class="btn btn--secondary">Default button</button></p>
 					<p><button type="button" class="btn btn--secondary btn--lg">Large button</button></p>
 					<p><button type="button" class="btn btn--secondary btn--xl">XL button</button></p>
