Add quotation style

--- a/web/server/views/style-guide/typography.njk
+++ b/web/server/views/style-guide/typography.njk
@@ -120,7 +120,7 @@
 		<h3>Simple block quotation</h3>
 
 		{% example "html" -%}
-			<blockquote>
+			<blockquote class="quote">
 				<p>In 2015, 74% of staff rated NICE as a good place to work.</p>
 			</blockquote>
 		{%- endexample %}
@@ -128,7 +128,7 @@
 		<h3>Block quotation w/ citation</h3>
 
 		{% example "html" -%}
-			<blockquote>
+			<blockquote class="quote">
 				<p>Older people using home care services have a home care plan that identifies how their personal priorities and outcomes will be met.</p>
 				<footer>
 					- <cite><a href="https://www.nice.org.uk/guidance/qs123">Home care for older people, NICE quality standard</a></cite>
@@ -139,7 +139,7 @@
 		<h3>Block quotation w/ citation</h3>
 
 		{% example "html" -%}
-			<blockquote>
+			<blockquote class="quote">
 				<p>We do the right work in the right way at NICE. We mix content, dev, design and research at the start to solve user problems.  We produce things quickly, get data and refine. </p>
 				<footer>
 					<cite><strong>Dafydd</strong> - Content Team</cite>
@@ -157,10 +157,10 @@
 					<img src="//placehold.it/640x360" alt="A placeholder" />
 				</div>
 				<div class="grid__item one-whole tablet--one-half">
-					<blockquote>
+					<blockquote class="quote">
 						<p>This is a quotation inside a grid</p>
 						<footer>
-							<cite>With a source</cite>
+							- <cite>With a source</cite>
 						</footer>
 					</blockquote>
 				</div>
