--- a/web/server/views/style-guide/typography.njk
+++ b/web/server/views/style-guide/typography.njk
@@ -9,6 +9,7 @@
 		<ul>
 			<li><a href="#intro">Intro</a></li>
 			<li><a href="#headings">Headings</a></li>
+			<li><a href="#paragraphs">Paragraphs</a></li>
 			<li><a href="#links">Links</a></li>
 			<li><a href="#lists">Lists</a></li>
 			<li><a href="#quotations">Quotations</a></li>
@@ -59,6 +60,22 @@
 			<h4>Heading 4</h4>
 			<h5>Heading 5</h5>
 			<h6>Heading 6</h6>
+		{%- endexample %}
+	</section>
+
+	<section id="paragraphs">
+		<h2>Paragraphs</h2>
+
+		{% example -%}
+			<p class="lead">
+				Curabitur dapibus risus at sem fermentum rhoncus sit amet vitae lectus. Morbi molestie, tortor et ultrices eleifend, nisi velit suscipit sem, et pulvinar nunc sapien sit amet risus. Donec pretium consequat mauris, quis ullamcorper massa pretium nec. Etiam porta arcu nunc, vel pharetra velit elementum at.
+			</p>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nibh augue, pulvinar nec condimentum in, vulputate a ipsum. Nulla facilisi. Sed et ex id nulla consequat bibendum nec quis nisi. Sed fermentum nisi nec velit finibus luctus. Ut felis turpis, facilisis quis leo vitae, porta mattis urna. Pellentesque at sollicitudin justo.
+			</p>
+			<p>
+				Donec tincidunt pretium mi, sit amet mattis leo auctor quis. In hac habitasse platea dictumst. Maecenas condimentum fringilla arcu eu convallis. Maecenas varius, orci ut fringilla varius, nibh felis sodales nunc, id ornare urna ex et urna. Donec commodo vestibulum bibendum. Donec in odio erat. Proin dapibus fermentum arcu, et volutpat ligula ultrices viverra.
+			</p>
 		{%- endexample %}
 	</section>
 
