Add paragraph guidelines

--- a/web/server/views/style-guide/typography.njk
+++ b/web/server/views/style-guide/typography.njk
@@ -66,6 +66,11 @@
 	<section id="paragraphs">
 		<h2>Paragraphs</h2>
 
+		<ul>
+			<li>use <code>class="lead"</code> for leading, important paragraphs</li>
+			<li>stick to 10 words per line as a guide</li>
+		</ul>
+
 		{% example -%}
 			<p class="lead">
 				Curabitur dapibus risus at sem fermentum rhoncus sit amet vitae lectus. Morbi molestie, tortor et ultrices eleifend, nisi velit suscipit sem, et pulvinar nunc sapien sit amet risus. Donec pretium consequat mauris, quis ullamcorper massa pretium nec. Etiam porta arcu nunc, vel pharetra velit elementum at.
