--- a/src/stylesheets/_bootstrap.scss
+++ b/src/stylesheets/_bootstrap.scss
@@ -26,5 +26,6 @@
 @import 'components/buttons';
 @import 'components/footer';
 @import 'components/phase';
+@import 'components/navbar';
 @import 'components/breadcrumbs';
 @import 'components/tables';
