--- a/web/server/views/style-guide/breadcrumbs.njk
+++ b/web/server/views/style-guide/breadcrumbs.njk
@@ -8,14 +8,14 @@
 	<section id="breadcrumbs">
 
 		<ul>
-			<li>Use <code>class="active"</code> for current page</li>
+			<li>Use <code>class="breadcrumbs__crumb--active"</code> for current page</li>
 		</ul>
 
 		{% example -%}
 			<ol class="breadcrumbs">
 				<li class="breadcrumbs__crumb"><a href="#">Home</a></li>
 				<li class="breadcrumbs__crumb"><a href="#">Nice Guidance</a></li>
-				<li class="breadcrumbs__crumb active">Conditions and diseases</li>
+				<li class="breadcrumbs__crumb breadcrumbs__crumb--active">Conditions and diseases</li>
 			</ol>
 		{%- endexample %}
 
@@ -27,7 +27,7 @@
 			<ol class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
 				<li class="breadcrumbs__crumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="#">Home</a></li>
 				<li class="breadcrumbs__crumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="#">Nice Guidance</a></li>
-				<li class="breadcrumbs__crumb active" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">Population groups</li>
+				<li class="breadcrumbs__crumb breadcrumbs__crumb--active" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">Population groups</li>
 			</ol>
 		{%- endexample %}
 	</section>
