Add base accessible tabs structure including jquery, modernizr, plugin architecture

--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 	<title>{{ title }} | NICE Experience</title>
+
+	<script src="/javascripts/modernizr-custom.js"></script>
 
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="stylesheet" href="/stylesheets/main.css" type="text/css" media="screen" charset="utf-8">
@@ -21,7 +23,7 @@
 				<strong class="phase-tag phase-tag--alpha">ALPHA</strong>
 			</span>
 			<span class="phase-banner__label">
-				NICE Experience is in development. This means there it isn't feature complete and there will be issues. Find any? Please, let us know!
+				NICE Experience is in development. This means there it isn't feature complete and there may be issues. Find any? Please, let us know!
 			</span>
 		</p>
 	</div>
