--- a/web/server/views/style-guide/navigation.njk
+++ b/web/server/views/style-guide/navigation.njk
@@ -1,4 +1,4 @@
-{% extends "../layouts/_sidebar.njk" %}
+{% extends "./_style-guide-layout.njk" %}
 {% set title = "Navigation" %}
 
 {% block main %}
