Navs and navbar added
Added navs and styling tweak for documentation phase-banner.

--- a/src/stylesheets/_bootstrap.scss
+++ b/src/stylesheets/_bootstrap.scss
@@ -27,6 +27,7 @@
 @import 'components/footer';
 @import 'components/phase';
 @import 'components/navbar';
+@import 'components/nav';
 @import 'components/breadcrumbs';
 @import 'components/tables';
 @import 'components/tabs';
