--- a/web/client/stylesheets/main.scss
+++ b/web/client/stylesheets/main.scss
@@ -6,5 +6,7 @@
 // Components
 @import 'components/example';
 @import 'components/swatch';
+@import 'components/navbar';
+@import 'components/phase';
 
 // Other
