Added components section
Moved components from style-guide directory and into component
directory. Added landing page content for both sections.

--- a/web/server/views/components/alpha-beta.njk
+++ b/web/server/views/components/alpha-beta.njk
@@ -1,4 +1,4 @@
-{% extends "./_style-guide-layout.njk" %}
+{% extends "./_components-layout.njk" %}
 {% set title = "Alpha and beta" %}
 
 {% block main %}
