--- a/web/server/views/components/breadcrumbs.njk
+++ b/web/server/views/components/breadcrumbs.njk
@@ -1,4 +1,4 @@
-{% extends "./_style-guide-layout.njk" %}
+{% extends "./_components-layout.njk" %}
 {% set title = "Breadcrumbs" %}
 
 {% block main %}
