--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -16,7 +16,7 @@
 		<h1>Welcome to NICE Experience</h1>
 		<h2 class="p">Your source for creating beautiful, consistent experiences across NICE</h2>
 
-		<h3 class="heading heading--separator">Style Library</h3>
+		<h3 class="heading heading--separator">Style Guide</h3>
 
 		<p>The foundations and patterns that are to be used for faster product development.</p>
 
@@ -33,17 +33,19 @@
 		</div>
 
 		<div class="panel">
-			<h3 class="heading heading--separator">UI Components</h3>
+			<h3 class="heading heading--separator">Components</h3>
 
 			<p>Further patterns</p>
 
 			<div class="grid">
 
-				{{ item("Breadcrumbs", "/style-guide/breadcrumbs", "Secondary navigation scheme that reveals the user's location") }}
+				{{ item("Breadcrumbs", "/components/breadcrumbs", "Secondary navigation scheme that reveals the user's location") }}
 
-				{{ item("Tabs", "/style-guide/tabs", "Content is separated into different panes, with only one pane viewable at a time.") }}
+				{{ item("Tabs", "/components/tabs", "Content is separated into different panes, with only one pane viewable at a time.") }}
 
-				{{ item("Alpha/beta", "/style-guide/alpha-beta", "Phase tags and banner to denote alpha and beta services") }}
+				{{ item("Alpha/beta", "/components/alpha-beta", "Phase tags and banner to denote alpha and beta services") }}
+
+				{{ item("Navigation", "/components/navigation", "Lorem ipsum dolor sit amet, consectetur adipisicing elit.") }}
 
 			</div>
 		</div>
