--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -1,4 +1,4 @@
-{% set topLevelNavigation = [{ title: "Nice Experience", href: "/" }, { title: "Style Guide", href: "/style-guide/" }, { title: "Components", href: "/components/" }, { title: "SASS", href: "/sass/" }, { title: "JavaScript", href: "/javascript/"}] %}
+{% set topLevelNavigation = [{ title: "NICE Experience", href: "/" }, { title: "Style Guide", href: "/style-guide/" }, { title: "Components", href: "/components/" }, { title: "SASS", href: "/sass/" }, { title: "JavaScript", href: "/javascript/"}] %}
 
 <!DOCTYPE html>
 <html lang="en" class="no-js">
@@ -43,7 +43,7 @@
 				<strong class="phase-tag phase-tag--alpha">ALPHA</strong>
 			</span>
 			<span class="phase-banner__label">
-				NICE Experience is in development. This means there it isn't feature complete and there may be issues. Find any? Please, let us know!
+				NICE Experience is in development. This means it is not feature complete and there may be issues. Find any? Please, let us know!
 			</span>
 		</p>
 	</div>
