--- a/web/server/views/layouts/_sidebar.njk
+++ b/web/server/views/layouts/_sidebar.njk
@@ -8,7 +8,45 @@
 			{# Sidebar #}
 			<aside class="grid__item one-whole tablet--one-third desktop--one-quarter" role="complementary">
 				{% block sidebar %}
-					Default sidebar content
+
+					<nav>
+						<h5>
+							<a href="/style-guide/">Style Guide</a>
+						</h5>
+						<ul>
+							<li><a href="/style-guide/layout">Layout</a></li>
+							<li><a href="/style-guide/typography">Typography</a></li>
+							<li><a href="/style-guide/buttons">Buttons</a></li>
+							<li><a href="/style-guide/colour">Colour</a></li>
+						</ul>
+						<h5>
+							<a href="/components/">Components</a>
+						</h5>
+						<ul>
+							<li><a href="/components/breadcrumbs">Breadcrumbs</a></li>
+							<li><a href="/components/tabs">Tabs</a></li>
+							<li><a href="/components/alpha-beta">Alpha/beta</a></li>
+							<li><a href="/components/navigation">Navigation</a></li>
+						</ul>
+						<h5>
+							<a href="/sass/">SASS</a>
+						</h5>
+						<ul>
+							<li><a href="/sass/syntax">Syntax</a></li>
+							<li><a href="/sass/naming">Naming</a></li>
+							<li><a href="/sass/layout">Layout</a></li>
+							<li><a href="/sass/colour">Colour</a></li>
+							<li><a href="/sass/docs">Documentation</a></li>
+						</ul>
+						<h5>
+							<a href="/javascript/">JavaScript</a>
+						</h5>
+						<ul>
+							<li><a href="/javascript/syntax">Syntax</a></li>
+							<li><a href="/javascript/docs">Documentation</a></li>
+						</ul>
+					</nav>
+
 				{% endblock %}
 			</aside>
 
