--- a/web/server/views/style-guide/buttons.njk
+++ b/web/server/views/style-guide/buttons.njk
@@ -18,7 +18,7 @@
 
 		<ul>
 			<li>Buttons can be <code>&lt;a&gt;</code>, <code>&lt;button&gt;</code> or <code>&lt;input&gt;</code></li>
-			<li>Use BEM mofifiers for different types</li>
+			<li>Use BEM modifiers for different types</li>
 		</ul>
 
 		{% example -%}
